[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PaLM-rlhf-pytorch"
version = "0.7.3"
description = "PaLM + Reinforcement Learning with Human Feedback - Pytorch"
readme = "README.md"
requires-python = ">= 3.6"
license = { text = "MIT" }
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformers",
    "attention mechanism",
    "reinforcement learning",
    "human feedback"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6"
]
dependencies = [
    "accelerate",
    "adam-atan2-pytorch",
    "beartype",
    "einx>=0.3.0",
    "einops>=0.8.0",
    "memmap-replay-buffer>=0.1.4",
    "torch-einops-utils",
    "hl-gauss-pytorch>=0.1.19",
    "torch>=2.2",
    "tqdm",
    "x-mlps-pytorch"
]

[project.urls]
Homepage = "https://codeberg.org/lucidrains/PaLM-rlhf-pytorch"

[tool.hatch.build]
include = [
    "palm_rlhf_pytorch",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["palm_rlhf_pytorch"]
